--- a/Camera_Calibration.ipynb
+++ b/Camera_Calibration.ipynb
@@ -180,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
